--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <p>
                         (주)더본코리아
                         <span>|</span>
-                        span사업자등록번호 211-86-00870
+                        사업자등록번호 211-86-00870
                         <span>|</span>
                         대표이사 백종원
                     </p>
