added popup notice
added popup notice about corona virus using JS

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
             </select>
         </div>
     </footer>
-    
+    <div class="notice">
+        <img src="images/코로나알림.jpg" class="notice">
+        <div class="close-bar">
+            <input type="checkbox">
+            하루동안 보이지 않기
+            <input type="submit" value = "Close" class="close-btn">
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
